# coap-server-temp

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  install.sh  test-drive.sh
src/: coapserver.rs  config.rs  influxdb.rs  lib.rs  main.rs  options.rs  sensordata.rs  startup.rs  tbuf.rs  url.rs  utils.rs
src/utils/: coapserver.rs  influxdb.rs  options.rs  outsensor.rs  sensordata.rs  tbuf.rs  url.rs  urlmap.rs  util.rs
