# Cargo.toml

[package]
name = "coap_server_temp"
version = "0.5.1"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
edition = "2021"
resolver = "2"


[dependencies]
anyhow = "1.0"
chrono = "0.4"
coap-lite = "0.9"
env_logger = "0.10"
futures = "0.3"
influxdb2 = "0.4"
log = "0.4"
once_cell = "1.18"
structopt = "0.3"
tokio = { version = "1.33", features = ["full"] }
coap-server = { git = "https://github.com/jasta/coap-server-rs" }
coap-server-tokio = { git = "https://github.com/jasta/coap-server-rs" }


[build-dependencies]
build-data = "0.1"


[profile.release]
lto = true
opt-level = 3

# EOF
