# Cargo.toml

[package]
name = "coap_server_temp"
version = "1.0.0"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
edition = "2021"
resolver = "2"


[dependencies]
anyhow = "1"
chrono = "0"
clap = { version = "4", features = ["derive"] }
coap-lite = "0.9"
env_logger = "0"
futures = "0"
influxdb2 = "0"
log = "0"
once_cell = "1"
tokio = { version = "1", features = ["full"] }
coap-server = { git = "https://github.com/jasta/coap-server-rs" }
coap-server-tokio = { git = "https://github.com/jasta/coap-server-rs" }


[build-dependencies]
build-data = "0.1"


[profile.release]
lto = true
opt-level = 3

# EOF
