# Cargo.toml

[package]
name = "coap_server_temp"
version = "1.4.0"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
edition = "2024"
resolver = "2"


[dependencies]
anyhow = "1"
chrono = "0"
clap = { version = "4", features = ["derive"] }
# old version because of coap-server crate
coap-lite = "0.9"
coap-server = { git = "https://github.com/jasta/coap-server-rs" }
coap-server-tokio = { git = "https://github.com/jasta/coap-server-rs" }
futures = "0"
influxdb2 = { version = "0", default-features = false, features = ["rustls"] }
once_cell = "1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0", features = ["log"] }
tracing-subscriber = "0"


[build-dependencies]
build-data = "0.3"


[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1

# EOF
